syntax = "proto3";

option csharp_namespace = "NTQTRAINING_PRJ.Protos";
import "google/protobuf/timestamp.proto";

service ProductDetailsServices{
	rpc Create(ProductDetail) returns(ProductDetailResponseResult);
	rpc Delete(ProductDetailId) returns(ProductDetailResponseResult);
	rpc GetAll(ProductDetailEmpty) returns(ListProductDetail);
	rpc Update(ProductDetail) returns(ProductDetailResponseResult);
}

message ProductDetailEmpty {}

message ProductDetail
{
	int32 Id=1;
    string Price=2;
    string Color=3;
    google.protobuf.Timestamp StartingDate=4;
    google.protobuf.Timestamp ClosingDate=5;
    string MadeBy=6;
    int32 ProductId=7;
    google.protobuf.Timestamp CreatedDate=8;
    google.protobuf.Timestamp UpdatedDate=9;
}

message ProductDetailResponseResult{
	ProductDetail item=1;
	bool result=2;
}

message ProductDetailId{
	int32 Id=1;
}

message ListProductDetail{
	repeated ProductDetail items=1;
}